policies/K8sPodDisruptionBudget/constraints.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPodDisruptionBudget
metadata:
  name: pod-distruption-budget
spec:
  match:
    kinds:
      - apiGroups: ['apps']
        kinds: ['Deployment', 'ReplicaSet', 'StatefulSet']
      - apiGroups: ['policy']
        kinds: ['PodDisruptionBudget']
      - apiGroups: ['']
        kinds: ['ReplicationController']
